test/netlist/error/duplicated-rom.bop
ROM name (0, 5) = text { 11110 }
ROM name (0, 5) = text { 00110 }
